hard-gists/1277655/run.log
=== Docker Run Log for 1277655 ===
Started at: Mi 29. Okt 12:04:51 CET 2025

[2025-10-29 12:04:52] START: Running container for 1277655
[2025-10-29 12:04:52] SUCCESS: Container 046dab4d9602a46c465396b0706002738d5c800ec25bc475bf1edd31c433ad49 started for 1277655
=== Container logs for 1277655 ===
  File "/snippet.py", line 37
    except Exception, e:
           ^^^^^^^^^^^^
SyntaxError: multiple exception types must be parenthesized
=== End of logs for 1277655 ===
[2025-10-29 12:04:54] INFO: Container 046dab4d9602a46c465396b0706002738d5c800ec25bc475bf1edd31c433ad49 has stopped
